# smartcash

./: .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  ARCHITECTURE_REFACTOR_SUMMARY.md  AUGMENTATION_OPTIMIZATION_SUMMARY.md  BOOLEAN_TENSOR_FIX_SUMMARY.md  CELL_EXECUTION_TESTS.md  CLAUDE.md  COLAB_UI_STANDARDIZATION_NOTES.md  DEPENDENCY_PERFORMANCE_OPTIMIZATIONS.md  DOWNLOADER_REFACTOR_SUMMARY.md  DOWNLOADER_TEST_REPORT.md  EARLY_STOPPING_LOSS_FIX_SUMMARY.md  GEMINI.md  HIERARCHICAL_VALIDATION_SUMMARY.md  INITIAL.md  MAP_INVESTIGATION.md  MEMORY_OPTIMIZATION_GUIDE.md  METRICS_INVESTIGATION.md  MIGRATION_GUIDE.md  MODEL_ARC.md  Makefile  OPERATION_CHECKLISTS.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PATTERNS.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PLAN.md  PLANNING.md  PREPROCESSING_OPTIMIZATION_COMPLIANCE.md  PREPROCESS_REFACTOR_SUMMARY.md  PROJECT_DOCUMENTATION.md  Panduan Commit Message (GitHook).md  Panduan UI Module with CommonInitializer.md  QWEN.md  README.md  REFACTORING_SUMMARY.md  RESUME_TRAINING_GUIDE.md  Run_Traceback_Demo_Directly.ipynb  SPLIT_REFACTOR_SUMMARY.md  (+131 more)
NOTES AND REPORT/: CORE_MODULE_INTEGRATION_SUMMARY.md  MODEL_BUILDER_TEST_RESULTS.md  NOTES_CORE_INFRASTRUCTURE_CLEANUP.md  SPLIT_MODULE_TEST_SUMMARY.md  UI_COMPONENT_MANAGER_REMOVAL_SUMMARY.md
PRPs/: yolov5-efficientnet-b4-currency-detection.md
backup_20250220_141213/: README.dataset.txt  README.roboflow.txt
backup_training_20250603_235705/: cleanup_utils.py  config_handlers.py  fallback_component.py  metrics_accordion.py  training_chart_utils.py  training_status_utils.py  (+7 more)
(+10084 files in other folders)
